// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers ParseInput should fail on non-js files 1`] = `
Array [
  "/test/fixtures/basic-test.ts",
]
`;

exports[`Helpers ParseInput should filter duplicate files 1`] = `
Array [
  "/test/fixtures/basic-test.ts",
  "/test/fixtures/class-test.ts",
]
`;

exports[`Helpers ParseInput should parse directories and files 1`] = `
Array [
  "/test/fixtures/express-hello-world/foobar.js",
  "/test/fixtures/express-hello-world/index.js",
  "/test/fixtures/js-file-test.js",
  "/test/fixtures/test-folder/test-js.js",
]
`;

exports[`Helpers ParseInput should parse directories and files 2`] = `
Array [
  "/src/alfred.js",
  "/test/Helpers.spec.js",
  "/test/Migrate.spec.js",
  "/test/fixtures/express-hello-world/foobar.js",
  "/test/fixtures/express-hello-world/index.js",
  "/test/fixtures/js-file-test.js",
  "/test/fixtures/test-folder/test-js.js",
]
`;
